css overlap fixing

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 @import "tailwindcss";
 
-#root {
+/* #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
@@ -41,7 +41,7 @@
 
 .read-the-docs {
   color: #888;
-}
+} */
 
 
 /* src/scrollbar.css */
